--- a/index.html
+++ b/index.html
@@ -183,24 +183,24 @@
             <p>Essentially, this gate is used from the model to decide how much of the past information to forget. To calculate it, we use:</p>
             <img src="gru_equation_5.png" alt="Reset gate eq" width="500">
             <p>Reset gate equation</p>
-            <p>This formula is the same as the one for the update gate. The difference comes in the weights and the gate’s usage.</p>
+            <p>This formula is the same as the one for the update gate. The difference comes in the weights and the usage of gate.</p>
 
-            <p>Let’s see how exactly the gates will affect the final output. First, we start with the usage of the reset gate. We introduce a new memory content which will use the reset gate to store the relevant information from the past. It is calculated as follows:</p>
+            <p>Let us see how exactly the gates will affect the final output. First, we start with the usage of the reset gate. We introduce a new memory content which will use the reset gate to store the relevant information from the past. It is calculated as follows:</p>
             <img src="gru_equation_8.png" alt="New hidden state eq" width="500">
             <p>New hidden state equation</p>
             <p>Multiply the input x_t with a weight W and h_(t-1) with a weight U.</p>
-            <p>Calculate the Hadamard (element-wise) product between the reset gate r_t and Uh_(t-1). That will determine what to remove from the previous time steps. Let’s say we have a sentiment analysis problem for determining one’s opinion about a book from a review he wrote. The text starts with “This is a fantasy book which illustrates…” and after a couple paragraphs ends with “I didn’t quite enjoy the book because I think it captures too many details.” To determine the overall level of satisfaction from the book we only need the last part of the review. In that case as the neural network approaches to the end of the text it will learn to assign r_t vector close to 0, washing out the past and focusing only on the last sentences.</p>
+            <p>Calculate the Hadamard (element-wise) product between the reset gate r_t and Uh_(t-1). That will determine what to remove from the previous time steps. Let us say we have a sentiment analysis problem for determining opinion of one about a book from a review he wrote. The text starts with This is a fantasy book which illustrates and after a couple paragraphs ends with I didn’t quite enjoy the book because I think it captures too many details. To determine the overall level of satisfaction from the book we only need the last part of the review. In that case as the neural network approaches to the end of the text it will learn to assign r_t vector close to 0, washing out the past and focusing only on the last sentences.</p>
             <p>Sum up the results of step 1 and 2.</p>
             <p>Apply the nonlinear activation function tanh.</p>
 
-            <p>As the last step, the network needs to calculate h_t — vector which holds information for the current unit and passes it down to the network. In order to do that the update gate is needed. It determines what to collect from the current memory content — h’_t and what from the previous steps — h_(t-1). That is done as follows:</p>
+            <p>As the last step, the network needs to calculate h_t vector which holds information for the current unit and passes it down to the network. In order to do that the update gate is needed. It determines what to collect from the current memory content h_t and what from the previous steps h_(t-1). That is done as follows:</p>
             <img src="gru_equation_7.png" alt="Final hidden state eq" width="500">
             <p>Final hidden state equation</p>
             <p>Apply element-wise multiplication to the update gate z_t and h_(t-1).</p>
-            <p>Apply element-wise multiplication to (1-z_t) and h’_t.</p>
+            <p>Apply element-wise multiplication to (1-z_t) and h_t.</p>
             <p>Sum the results from step 1 and 2.</p>
             <p>
-                Let’s bring up the example about the book review. This time, the most relevant information is positioned in the beginning of the text. The model can learn to set the vector z_t close to 1 and keep a majority of the previous information. Since z_t will be close to 1 at this time step, 1-z_t will be close to 0 which will ignore big portion of the current content (in this case the last part of the review which explains the book plot) which is irrelevant for our prediction.
+                Let us bring up the example about the book review. This time, the most relevant information is positioned in the beginning of the text. The model can learn to set the vector z_t close to 1 and keep a majority of the previous information. Since z_t will be close to 1 at this time step, 1-z_t will be close to 0 which will ignore big portion of the current content (in this case the last part of the review which explains the book plot) which is irrelevant for our prediction.
             </p>
             <p>Now, you can see how GRUs are able to store and filter the information using their update and reset gates. That eliminates the vanishing gradient problem since the model is not washing out the new input every single time but keeps the relevant information and passes it down to the next time steps of the network. If carefully trained, they can perform extremely well even in complex scenarios.</p>
         </div>
