--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                         <b>
                             Hochreiter and Schmidhuber (1997): "Long Short-Term Memory"
                         </b>
-                        <br>Sepp Hochreiter and Jürgen Schmidhuber introduced Long Short-Term Memory (LSTM) networks to address the vanishing gradient problem in traditional RNNs. LSTMs incorporate memory cells and gating mechanisms to better capture long-term dependencies.
+                        <br>Sepp Hochreiter and Jurgen Schmidhuber introduced Long Short-Term Memory (LSTM) networks to address the vanishing gradient problem in traditional RNNs. LSTMs incorporate memory cells and gating mechanisms to better capture long-term dependencies.
                     </li>
                     <li>
                         <b>
                             Schmidhuber (1992): "Learning Composed Representations with Neural Networks"
                         </b>
-                        <br>Jürgen Schmidhuber's work on learning composed representations helped establish the importance of neural networks with memory, paving the way for more sophisticated recurrent architectures.
+                        <br>Jurgen Schmidhuber's work on learning composed representations helped establish the importance of neural networks with memory, paving the way for more sophisticated recurrent architectures.
                     </li>
                     <li>
                         <b>
@@ -122,7 +122,7 @@
             <h5>Caglar Gulcehre</h5>
             <img src="caglar.jpg" alt="Image of Caglar Gulcehre" width="300" height="300">
             <p>
-                Assistant Professor at EPFL (École polytechnique fédérale de Lausanne) (2023-Present)
+                Assistant Professor at EPFL (Ecole polytechnique federale de Lausanne) (2023-Present)
                 <br>Research Scientist at Google's DeepMind (2017-2023)
                 <br>Postdoctoral under the supervision of Prof. Yoshua Bengio at Mila (2012-2017)
                 <br>Work related to reinforcement learning, deep learning and natural language understanding
@@ -132,7 +132,7 @@
             <p>
                 Adjunct Professor at McGill University (Present)
                 <br>Research Scientist at ServiceNow Element AI (2021-Present)
-                <br>PhD at Mila and Université de Montréal working with Yoshua Bengio (2014-2020)
+                <br>PhD at Mila and Universite de Montreal working with Yoshua Bengio (2014-2020)
                 <br>Master's from Jacobs University Bremen (2013-2015)
             </p>
             <h5>Fethi Bougares</h5>
@@ -157,7 +157,7 @@
             <p>
                 Founder and Scientific Director of Mila - Quebec AI Institute
                 <br>Won the Turing Award (2018)
-                <br>Professor at Université de Montréal (2013-Present)
+                <br>Professor at Universite de Montreal (2013-Present)
                 <br>Co-directs the CIFAR Learning in Machines & Brains
                 <br>Postdoctoral from MIT (1991-1992)
                 <br>Machine Learning Researcher, Brain and cognitive sciences department, AI lab at MIT ((1991-1992))
