--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 Professor at CILVR Group, NYU (2015-Present)
                 <br>Co-Founder & Senior Director of Frontier Research at Genentech Research and Early Development (2021-Present)
                 <br>Research scientist at Facebook AI Research (2017-2020)
-                <br>Postdoctoral fellow at Université de Montréal under the supervision of Prof. Yoshua Bengio (2014-2015)
+                <br>Postdoctoral fellow at Universite de Montreal under the supervision of Prof. Yoshua Bengio (2014-2015)
             </p>
             <h5>Bart van Merrienboer</h5>
             <img src="bart.jpg" alt="Image of Bart van Merrienboer" width="300" height="300">
